--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "requires": true,
   "lockfileVersion": 1,
   "devDependencies": {
-	"cypress": "^8.5.0",
+    "blns": "^2.0.4",
+    "cypress": "^8.5.0",
     "cypress-file-upload": "^5.0.8",
     "cypress-grep": "^2.5.3",
     "cypress-mochawesome-reporter": "^2.3.0",
     "cypress-multi-reporters": "^1.4.0",
     "cypress-real-events": "^1.5.1",
     "cypress-recurse": "^1.8.1",
+    "cypress-wait-until": "^1.7.1",
     "cypress-xpath": "^1.6.2",
     "faker": "^5.5.3",
     "gmail-tester": "^1.3.2",
