--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "cypress:open": "cypress open",
-    "cypress:run tests": "npx cypress run -b chrome --headless",    
+    "cypress:run tests": "npx cypress run -b chrome --headless"
   },
   "requires": true,
   "lockfileVersion": 1,
@@ -12,10 +12,10 @@
     "cypress-grep": "^2.5.3",
     "cypress-mochawesome-reporter": "^2.3.0",
     "cypress-multi-reporters": "^1.4.0",
-    "cypress-real-events": "^1.5.1",
     "cypress-recurse": "^1.8.1",
     "cypress-wait-until": "^1.7.1",
     "cypress-xpath": "^1.6.2",
+    "cypress-real-events": "^1.5.1",
     "faker": "^5.5.3",
     "gmail-tester": "^1.3.2",
     "imap-simple": "^5.0.0",
