--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,13 @@
 trigger:
-- none
+- develop
+- stage
+
+schedules:
+  - cron: '30 4 * * *'
+    displayName: Daily morning check
+    branches:
+      include:
+      - develop
 
 pool:
   name: Default
